DMC-E系列控制卡例程/VB.net/例2_连续运动/例2_连续运动/LTDMC.vb


    '回零运动
    ' <summary>
    ' 设置原点信号
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="org_logic">有效电平：0-低电平，1-高电平</param>
    ' <param name="Filter">滤波时间：0 保留</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_home_pin_logic Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal org_logic As UInt16, ByVal Filter As Double) As Int16         '设置HOME信号
    ' <summary>
    ' 读取原点信号
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="org_logic">有效电平：0-低电平，1-高电平</param>
    ' <param name="Filter">滤波时间：0 保留</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_home_pin_logic Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef org_logic As UInt16, ByRef Filter As Double) As Int16     '读取设置HOME信号
    ' <summary>
    ' 设置回零模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="home_dir">回零方向：0-负方向，1-正方向</param>
    ' <param name="vel_mode">回零速度模式：0-低速回零，1-高速回零</param>
    ' <param name="home_mode">回零模式：0-一次回零，1-一次回零+反找，2-二次回零，3-一次回零+一次EZ回零，4-一次EZ回零</param>
    ' <param name="EZ_count">EZ次数：1 保留</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_homemode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal home_dir As UInt16, ByVal vel_mode As Double, ByVal home_mode As UInt16, ByVal EZ_count As UInt16) As Int16 '设定指定轴的回原点模式
    ' <summary>
    ' 读取回零模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="home_dir">回零方向：0-负方向，1-正方向</param>
    ' <param name="vel_mode">回零速度模式：0-低速回零，1-高速回零</param>
    ' <param name="home_mode">回零模式：0-一次回零，1-一次回零+反找，2-二次回零，3-一次回零+一次EZ回零，4-一次EZ回零</param>
    ' <param name="EZ_count">EZ次数：1 保留</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_homemode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef home_dir As UInt16, ByRef vel_mode As Double, ByRef home_mode As UInt16, ByRef EZ_count As UInt16) As Int16 '读取指定轴的回原点模式
    ' <summary>
    ' 回零运动
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_home_move Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16
    Declare Function dmc_set_home_profile_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Low_Vel As Double, ByVal High_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Int16 '设定回零速度曲线参数
    Declare Function dmc_get_home_profile_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef Low_Vel As Double, ByRef High_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double) As Int16 '读取回零速度曲线参数
    Declare Function dmc_get_home_result Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef state As UInt16) As Int16
    Declare Function dmc_set_home_position_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal position As Double) As Int16
    Declare Function dmc_get_home_position_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef position As Double) As Int16
    Declare Function dmc_set_el_home Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal mode As UInt16) As Int16

    Declare Function dmc_set_sd_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal sd_logic As UInt16, ByVal sd_mode As UInt16) As Int16      '设置SD信号
    Declare Function dmc_get_sd_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef sd_logic As UInt16, ByRef sd_mode As UInt16) As Int16    '读取设置SD信号
    '原点锁存
    '3800 5800专用
    ' <summary>
    ' 设置原点锁存模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="logic">锁存触发方式：0-下降沿触发，1-上升沿触发</param>
    ' <param name="source">锁存源：0-指令位置，1-反馈位置</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_homelatch_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal logic As UInt16, ByVal source As UInt16) As Int16
    ' <summary>
    ' 读取原点锁存模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="logic">锁存触发方式：0-下降沿触发，1-上升沿触发</param>
    ' <param name="source">锁存源：0-指令位置，1-反馈位置</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_homelatch_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef logic As UInt16, ByRef source As UInt16) As Int16
    ' <summary>
    ' 读取原点锁存状态
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>锁存状态：0-未锁存，1-已锁存</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_homelatch_flag Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int32
    ' <summary>
    ' 清除原点锁存状态
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_reset_homelatch_flag Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16
    ' <summary>
    ' 读取原点锁存值
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_homelatch_value Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int32

    'ez锁存
    Declare Function dmc_set_ezlatch_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal logic As UInt16, ByVal Source As UInt16) As Int16
    Declare Function dmc_get_ezlatch_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef logic As UInt16, ByRef Source As UInt16) As Int16
    Declare Function dmc_get_ezlatch_flag Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int32
    Declare Function dmc_reset_ezlatch_flag Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16
    Declare Function dmc_get_ezlatch_value Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int32

    '手轮运动
    '3800 5800专用 手轮通道选择
    ' <summary>
    ' 设置手轮通道
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="index">手轮通道：0-高速通道，1-低速通道</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_handwheel_channel Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal index As UInt16) As Int16
    ' <summary>
    ' 读取手轮通道
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="index">手轮通道：0-高速通道，1-低速通道</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_handwheel_channel Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef index As UInt16) As Int16
    '一个手轮信号控制单个轴运动
    ' <summary>
    ' 设置手轮模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="inmode">手轮模式：0-AB相，1-脉冲+方向</param>
    ' <param name="multi">倍率：[-100,100],负值表示反向</param>
    ' <param name="vh">保留</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_handwheel_inmode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal inmode As UInt16, ByVal multi As Int32, ByVal vh As Double) As Int16      '设置输入手轮脉冲信号的工作方式
    ' <summary>
    ' 读取手轮模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="inmode">手轮模式：0-AB相，1-脉冲+方向</param>
    ' <param name="multi">倍率：[-100,100],负值表示反向</param>
    ' <param name="vh">保留</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_handwheel_inmode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef inmode As UInt16, ByRef multi As Int32, ByRef vh As Double) As Int16    '读取输入手轮脉冲信号的工作方式
    Declare Function dmc_set_handwheel_inmode_decimals Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal inmode As UInt16, ByVal multi As Double, ByVal vh As Double) As Int16      '设置输入手轮脉冲信号的工作方式
    Declare Function dmc_get_handwheel_inmode_decimals Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef inmode As UInt16, ByRef multi As Double, ByRef vh As Double) As Int16    '读取输入手轮脉冲信号的工作方式
    '3800 5800专用 一个手轮信号控制多轴运动
    ' <summary>
    ' 设置多轴跟随手轮模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="inmode">手轮模式：0-AB相，1-脉冲+方向</param>
    ' <param name="AxisNum">轴数：1-8</param>
    ' <param name="AxisList">跟随手轮轴列表</param>
    ' <param name="multi">跟随倍率列表，[-100,100],负值表示反向</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_handwheel_inmode_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal inmode As UInt16, ByVal AxisNum As UInt16, ByVal AxisList() As UInt16, ByVal multi() As Int32) As Int16     '设置输入手轮脉冲信号的工作方式
    ' <summary>
    ' 读取多轴跟随手轮模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="inmode">手轮模式：0-AB相，1-脉冲+方向</param>
    ' <param name="AxisNum">轴数：1-8</param>
    ' <param name="AxisList">跟随手轮轴列表</param>
    ' <param name="multi">跟随倍率列表，[-100,100],负值表示反向</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_handwheel_inmode_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef inmode As UInt16, ByRef AxisNum As UInt16, ByVal AxisList() As UInt16, ByVal multi() As Int32) As Int16   '读取输入手轮脉冲信号的工作方式
    Declare Function dmc_set_handwheel_inmode_extern_decimals Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal inmode As UInt16, ByVal AxisNum As UInt16, ByVal AxisList() As UInt16, ByVal multi() As Double) As Int16     '设置输入手轮脉冲信号的工作方式
    Declare Function dmc_get_handwheel_inmode_extern_decimals Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef inmode As UInt16, ByRef AxisNum As UInt16, ByVal AxisList() As UInt16, ByVal multi() As Double) As Int16   '读取输入手轮脉冲信号的工作方式

    '启动手轮运动
    ' <summary>
    ' 启动手轮运动
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_handwheel_move Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16         '启动指定轴的手轮脉冲运动
